# rust-rps

./: .gitignore  .gitmodules  Cargo.toml  bind.sh  build.rs  callback_runtime.cpp  compile.sh  compile_dynamic.sh  custom_runtime.cpp  custom_runtime.hpp  imports.c  renderdoc.cap  rps_multithreading.wat  wasm-compile-inst.sh
examples/: builtin_callbacks.rs  node_callbacks.rs  pipelines.rs  reflection.rs  wgpu.rs
pipeline_shaders/: 3d.rpsl  rps_multithreading.rpsl  rps_multithreading.wasm  upscale.rpsl  upscale.wasm
shaders/: blit.frag.spv  blit.hlsl  blit.vert.spv  emissive.hlsl  skybox.hlsl  tonemap.hlsl  triangle.vert.spv  triangle_breathing.vert.spv
shaders/pipeline/: 3d.rpsl  bloom.rpsl
src/: builtin_callbacks.rs  lib.rs  main.rs  mapping.rs  node_callbacks.rs  rps.rs
