[package]
name = "rps"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.2.1"
libloading = "0.8.0"

[dev-dependencies]
pollster = "0.3.0"
rspirv-reflect = "0.7.0"
structopt = "0.3.26"
wgpu = { version = "0.16.0", features = ["spirv"] }
winit = "0.28.4"
bytemuck = { version = "1.13.1", features = ["derive"] }
gltf = "1.1.0"
image = "0.24.6"
glam = { version = "0.23.0", features = ["bytemuck"] }
anyhow = "1.0.71"
dolly = "0.4.1"

[build-dependencies]
bindgen = "0.65.1"
cmake = "0.1.50"
