[package]
name = "rps-custom-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
render-pipeline-shaders = { git = "https://github.com/expenses/render-pipeline-shaders-rs", branch = "changes", default-features=false }
render-pipeline-shaders-sys = { git = "https://github.com/expenses/render-pipeline-shaders-rs", branch = "changes" }

[dev-dependencies]
pollster = "0.3.0"
structopt = "0.3.26"
wgpu = { version = "0.16.0", features = ["spirv"] }
winit = "0.28.4"
bytemuck = { version = "1.13.1", features = ["derive"] }
gltf = "1.1.0"
image = "0.24.6"
glam = { version = "0.23.0", features = ["bytemuck"] }
anyhow = "1.0.71"
dolly = "0.4.1"
libloading = "0.8.0"
spirq = "0.6.3"
spirv = "0.2.0"
ktx2 = "0.3.0"
zstd = "0.12.3"
hassle-rs = "0.10.0"

[build-dependencies]
bindgen = { path = "../rust-bindgen/bindgen"}
