[package]
name = "rps-custom-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
render-pipeline-shaders = { git = "https://github.com/expenses/render-pipeline-shaders-rs", branch = "changes", default-features=false }
render-pipeline-shaders-sys = { git = "https://github.com/expenses/render-pipeline-shaders-rs", branch = "changes" }

[build-dependencies]
bindgen = { git = "https://github.com/expenses/rust-bindgen", branch = "process-field-name" }
